tests/NormalTests/paczka1/fuzzy1/96128474.err
Error in line 9: JdiGKyY S101 65,5
Error in line 8: K9Ui S573 29,3
Error in line 13: K9Ui S101 1,6
Error in line 16: K9Ui S573 73,6
Error in line 28: lneIuxH S105 40,5
